test-rule-filter/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-configmap
  namespace: test-namespace
  labels:
    immutable: "true"
data:
  key1: value1
